--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.CAMERA" />
     <application
-        android:label="shopping_list_manager"
+        android:label="Assistente Spesa"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
