add vocal button in current list screen. add speech_to_text package and first implementation of voice recognition.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,10 @@ dependencies:
   # Icons
   cupertino_icons: ^1.0.8
   emoji_picker_flutter: ^3.1.0
+  # Speech Recognition
+  # avatar_glow: ^3.0.1
+  speech_to_text: 7.1.0
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
