--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   speech_to_text: 7.1.0
   permission_handler: ^11.3.1
   fuzzywuzzy: ^1.2.0
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
@@ -45,3 +46,4 @@ flutter:
     - assets/icons/
     - assets/icons/departments/
     - assets/icons/products/
+    - assets/tutorials/
